--- a/src/assets/css/Styles.css
+++ b/src/assets/css/Styles.css
@@ -5,6 +5,10 @@
   margin: 0;
 }
 
+body {
+  background-color: black;
+}
+
 h3 {
   font-family: "Bebas Neue", cursive;
   font-size: 1.25rem;
@@ -40,10 +44,13 @@ h1 {
 #hero {
   background-color: black;
   height: 100vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: url("../img/back.png") center / cover no-repeat;
+  background-attachment: fixed;
 }
 
 #hero h1 {
