--- a/src/assets/css/Styles.css
+++ b/src/assets/css/Styles.css
@@ -10,6 +10,13 @@ body {
   background-color: black;
 }
 
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  font-size: 6.7rem;
+  line-height: 86.4%;
+}
+
 h3 {
   font-family: "Bebas Neue", cursive;
   font-size: 1.25rem;
@@ -19,11 +26,8 @@ h3 {
   color: #ffffff;
 }
 
-h1 {
+p {
   font-family: "Roboto", sans-serif;
-  font-weight: 900;
-  font-size: 8.125rem;
-  line-height: 86.4%;
 }
 
 /* BUTTON */
@@ -82,7 +86,7 @@ h1 {
   height: 100vh;
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   background: url("../img/back.png") center / cover no-repeat;
@@ -102,6 +106,33 @@ h1 {
   -webkit-text-fill-color: transparent;
   margin-left: -10px;
   margin-bottom: 30px;
+}
+
+#hero .hero-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+#hero .hero-text {
+  margin: 20px;
+}
+
+#hero .hero-model {
+  padding: 20px;
+  border: 2px solid rgba(255, 255, 255, 0.1);
+}
+
+#hero .hero-model p {
+  font-weight: 300;
+  font-size: 10px;
+  line-height: 86.4%;
+  margin-top: 30px;
+  letter-spacing: 0.4em;
+  text-transform: uppercase;
+  text-align: center;
+  color: #ffffff;
 }
 
 /* ABOUT */
