--- a/src/assets/css/Styles.css
+++ b/src/assets/css/Styles.css
@@ -156,11 +156,15 @@ p {
   color: #393c41;
 }
 
+#about.bg-black {
+  background-color: #000;
+}
+
 #made {
   padding: 100px 0 80px;
   transition: all 0.4s linear;
-  /* background-color: #fff; */
-  background-color: #000;
+  background-color: #fff;
+  /* background-color: #000; */
 }
 
 #made h1 {
@@ -185,4 +189,8 @@ p {
   font-size: 14px;
   line-height: 21px;
   color: #c6c3be;
+}
+
+#made.bg-black {
+  background-color: #000;
 }
