--- a/src/assets/css/Styles.css
+++ b/src/assets/css/Styles.css
@@ -144,22 +144,29 @@ p {
   text-align: center;
 }
 
-.panel-text {
+.info-panel {
   height: 100vh;
 }
 
-.panel-text h1 {
+.info-panel h1 {
   font-size: 30px;
   font-weight: 400;
   color: #c6c3be;
   text-align: left;
 }
 
-.panel-text p {
+.info-panel p {
   font-size: 12px;
   font-weight: 400;
   color: #717171;
   text-align: left;
+}
+
+.panel-text {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .panel.black {
@@ -171,6 +178,16 @@ p {
   background-position: center;
   height: 100vh;
   width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .panel-bg {
+    height: 50vh;
+  }
+
+  .panel-text {
+    height: 50vh;
+  }
 }
 
 .panel-bg-1 {
