--- a/src/assets/css/Styles.css
+++ b/src/assets/css/Styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300;400;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300;400;500;900&display=swap");
 @import url("../fonts/Gotham/stylesheet.css");
 
 * {
@@ -47,7 +47,8 @@ p {
   padding: 14px 32px 4px;
   cursor: pointer;
   font-weight: 500;
-  font-size: 14px;
+  letter-spacing: 2px;
+  font-size: 12px;
   text-transform: uppercase;
   transition: all 0.1s linear;
   background-color: #1e1e1e;
@@ -76,9 +77,8 @@ p {
 /* NAVBAR */
 #navbar {
   top: 0;
-  background: rgba(0, 0, 0, 0);
+  background: rgba(255, 255, 255, 0);
   transition: top 0.3s, background 0.3s;
-  position: absolute;
   z-index: 1000;
 }
 
@@ -87,12 +87,18 @@ p {
   font-weight: 500;
   font-size: 14px;
   text-transform: uppercase;
-  color: #000;
+  /* color: #000; */
 }
 
 .navbar .nav-item .nav-link {
-  color: #000;
+  color: #fff;
   padding: 0;
+  transition: all 0.1s linear;
+}
+
+.navbar .nav-item .nav-link:hover {
+  color: #fff;
+  opacity: 0.6;
 }
 
 .navbar-brand {
@@ -100,7 +106,7 @@ p {
 }
 
 .custom-toggler .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,0,0, 1)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
 .custom-toggler.navbar-toggler {
@@ -112,99 +118,125 @@ p {
 }
 
 /* HERO */
-#hero {
+.hero-slider {
   height: 100vh;
+  width: 100vw;
+  /* padding: 0;
+  margin: 0; */
+}
+
+.hero-slider-child {
+  background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+    url("../img/bg1.png") center / cover no-repeat;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
+  align-items: left;
+  justify-content: center;
+}
+
+.hero-slider-child .text h1 {
+  font-size: 32px;
+  font-weight: 500;
+  color: white;
+}
+
+.hero-slider-child .text p {
+  font-size: 14px;
+  font-weight: 400;
+  color: white;
+  max-width: 500px;
+}
+
+.hero-slider-child .text .red {
+  color: #ff3002;
+}
+
+.hero-slider-child .g-btn {
+  margin-right: 15px;
+}
+
+#hero .td-cta {
+  position: absolute;
+  right: 200px;
+  top: 200px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  text-align: center;
-  background-image: url("../img/back3.jpg");
-  background-size: cover;
 }
 
-#hero h1 {
-  margin-top: -25px;
+#hero .td-cta img {
+  max-width: 70px;
 }
 
-#hero img {
-  width: 600px;
+#hero .td-cta h4 {
+  color: white;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-left: 10px;
+  margin-bottom: 0;
 }
 
-#pinContainer {
+#card1 {
+  background: #fff;
   height: 100vh;
-  width: 100vw;
-  overflow: hidden;
+  display: flex;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
 }
 
-#pinContainer .panel {
-  height: 100vh;
-  width: 100vw;
+#card1 .bg-text {
   position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#card1 .bg-text h1 {
+  font-size: 28vw;
+  /* color: #e8e8e8; */
+  color: #3bb1b1;
+  opacity: 0.1;
+  line-height: 90%;
   text-align: center;
 }
 
-.info-panel {
-  height: 100vh;
-}
-
-.info-panel h1 {
+#card1 h3 {
+  color: #3bb1b1;
+  text-transform: uppercase;
+  font-weight: 500;
   font-size: 30px;
-  font-weight: 400;
-  color: #c6c3be;
-  text-align: left;
+  line-height: 39px;
+  letter-spacing: 0.12rem;
 }
 
-.info-panel p {
-  font-size: 12px;
-  font-weight: 400;
-  color: #717171;
-  text-align: left;
+#card1 h1 {
+  font-size: 65px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #202020;
+  line-height: 74px;
 }
 
-.panel-text {
-  height: 100vh;
-  width: 100%;
+#card1 .hex-btn {
   display: flex;
   align-items: center;
 }
 
-.panel.black {
-  background-color: #000;
+#card1 .hex-btn img {
+  max-width: 60px;
 }
 
-.panel-bg {
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-  width: 100%;
+#card1 .hex-btn h4 {
+  font-size: 14px;
+  letter-spacing: 2px;
+  margin-bottom: 0;
+  margin-left: 10px;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
-@media screen and (max-width: 768px) {
-  .panel-bg {
-    height: 50vh;
-  }
-
-  .panel-text {
-    height: 50vh;
-  }
-}
-
-.panel-bg-1 {
-  background-image: url("../img/panel1.jpg");
-}
-
-.panel-bg-2 {
-  background-image: url("../img/panel2.jpg");
-}
-
-.panel-bg-3 {
-  background-image: url("../img/panel3.jpg");
-}
-
-.full-height {
-  height: 100%;
-}
 /* ABOUT PAGE */
 #about {
   padding: 100px 0 80px;
@@ -224,7 +256,7 @@ p {
   color: #393c41;
 }
 
-#about p {
+#about h4 {
   font-size: 14px;
   line-height: 21px;
   color: #393c41;
