--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -3,6 +3,15 @@
     url("../img/backgrounds/homeHero1.jpg") center / cover no-repeat;
 }
 
+#home .swiper-pagination-bullet {
+  background: var(--white);
+  opacity: 1;
+}
+
+#home .swiper-pagination-bullet-active {
+  background: var(--red);
+}
+
 #home-hero h2 {
   max-width: 600px;
 }
@@ -23,12 +32,49 @@
   outline: 2px solid #fff;
   outline-offset: -2rem;
   padding: 3rem;
+  height: 400px;
 }
 
 #home-types .home-types-box.mountain-type {
   background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
     url("../img/cycles/typeMountain.jpg") center / cover no-repeat;
-  height: 400px;
+}
+
+#home-types .home-types-box.foldable-type {
+  background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+    url("../img/cycles/typeFoldable.jpg") center / cover no-repeat;
+}
+
+#home-types .home-types-box.city-type {
+  background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+    url("../img/cycles/typeCity.jpg") center / cover no-repeat;
+}
+
+#home-types .home-types-box.delivery-type {
+  background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+    url("../img/cycles/typeDelivery.jpg") center / cover no-repeat;
+}
+
+#home-types .swiper-wrapper {
+  padding-bottom: 50px;
+}
+
+#home-types
+  .swiper-container-horizontal
+  > #home-types
+  .swiper-pagination-bullets,
+#home-types .swiper-pagination-custom,
+#home-types .swiper-pagination-fraction {
+  bottom: 0px !important;
+}
+
+#home-types .swiper-pagination-bullet {
+  background: var(--white);
+  opacity: 1;
+}
+
+#home-types .swiper-pagination-bullet-active {
+  background: var(--red);
 }
 
 /* HERO */
