--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -7,10 +7,23 @@
   background: var(--grey);
 }
 
+#about-info .inside-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 #about-text {
   padding: 100px 0;
 }
 
 #about-team {
   padding: 100px 0;
+}
+
+@media screen and (min-width: 992px) {
+  #about-team img {
+    max-width: 270px;
+  }
 }
