--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -19,6 +19,10 @@
   padding: 100px 0;
 }
 
+#about-text ul {
+  list-style-position: inside;
+}
+
 #about-team {
   padding: 100px 0;
 }
@@ -26,5 +30,43 @@
 @media screen and (min-width: 992px) {
   #about-team img {
     max-width: 270px;
+  }
+}
+
+/* FEATURE */
+#feature {
+  padding: 100px 0;
+  text-align: center;
+}
+
+#feature img {
+  max-height: 200px;
+}
+
+#feature h3 {
+  color: #000;
+}
+
+#feature .marquee {
+  position: relative;
+  width: 100vw;
+  max-width: 100%;
+  height: 200px;
+  overflow-x: hidden;
+}
+
+#feature .track {
+  position: absolute;
+  white-space: nowrap;
+  will-change: transform;
+  animation: marquee 32s linear infinite;
+}
+
+@keyframes marquee {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-50%);
   }
 }
