--- a/src/assets/css/Product.css
+++ b/src/assets/css/Product.css
@@ -22,7 +22,7 @@
 }
 
 #info-text {
-  background: url("../img/backgrounds/guideDownload.jpg");
+  background: url("../img/backgrounds/guideDownload.jpeg");
   min-height: 100vh;
   background-position: center;
   background-size: cover;
