--- a/src/assets/css/Styles.css
+++ b/src/assets/css/Styles.css
@@ -250,7 +250,7 @@ p {
 .navbar {
   font-family: "Sen", sans-serif;
   font-weight: 500;
-  /* font-size: 12px; */
+  font-size: 14px;
   letter-spacing: 2px;
   text-transform: uppercase;
   /* color: #000; */
