--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -5,27 +5,27 @@
 
 .home-hero-1 {
   background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
-    url("../img/backgrounds/homeHero1.jpg") center / cover no-repeat;
+    url("../img/backgrounds/homeHero1.jpeg") center / cover no-repeat;
 }
 
 .home-hero-2 {
   background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
-    url("../img/backgrounds/homeHero2.jpg") center / cover no-repeat;
+    url("../img/backgrounds/homeHero2.jpeg") center / cover no-repeat;
 }
 
 .home-hero-3 {
   background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
-    url("../img/backgrounds/homeHero3.jpg") center / cover no-repeat;
+    url("../img/backgrounds/homeHero3.jpeg") center / cover no-repeat;
 }
 
 .home-hero-4 {
   background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
-    url("../img/backgrounds/homeHero4.jpg") center / cover no-repeat;
+    url("../img/backgrounds/homeHero4.jpeg") center / cover no-repeat;
 }
 
 .home-hero-5 {
   background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
-    url("../img/backgrounds/homeHero5.jpg") center / cover no-repeat;
+    url("../img/backgrounds/homeHero5.jpeg") center / cover no-repeat;
 }
 
 #home {
@@ -109,7 +109,7 @@
 }
 
 #guide {
-  background: url("../img/backgrounds/guideDownload.jpg");
+  background: url("../img/backgrounds/guideDownload.jpeg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
